# dgemm

./: Makefile  Makefile.openmp  README.md  common.h  d.cu  half.cu  half2.cu  mt-dgemm.c  sgemm.cu
rocm-test/: CMakeLists.txt  Hip_LU_fac.hpp  main.cpp  roc_kernel.cpp  roc_kernel.hpp
