cmake_minimum_required(VERSION 3.21 FATAL_ERROR)

enable_language(HIP)
set(HIP_PATH $ENV{HIP_PATH})
set(ROCM_PATH $ENV{ROCM_PATH})
set(CMAKE_MODULE_PATH "${HIP_PATH}/cmake" ${CMAKE_MODULE_PATH})
project(roctest CXX)
find_package(MPI REQUIRED)
find_package(HIP REQUIRED)
find_package(OpenMP REQUIRED)
find_library(rocblas ${ROCM_PATH}/lib)
find_library(rocsolver ${ROCM_PATH}/lib)
include_directories(SYSTEM ${MPI_INCLUDE_PATH})

if(HIP_FOUND)
    message(STATUS "Found HIP: " ${HIP_VERSION})
else()
    message(FATAL_ERROR "Could not find HIP.")
endif()

set(roctest_SRC_FILES roc_kernel.cpp roc_kernel.hpp Hip_LU_fac.hpp  main.cpp)
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++14 -x hip -fopenmp")
hip_add_executable(hipLU ${roctest_SRC_FILES})
target_include_directories(hipLU SYSTEM PUBLIC ${ROCM_PATH}/include)
target_link_directories(hipLU SYSTEM PUBLIC ${ROCM_PATH}/lib)
target_link_libraries(hipLU rocblas rocsolver ${OpenMP_CXX_LIBRARIES} ${MPI_LIBRARIES})
set_property(TARGET hipLU PROPERTY HIP_ARCHITECTURES gfx908)
